regression-tests/test-results/gcc-13/pure2-bugfix-for-ufcs-sfinae.cpp.output
In file included from pure2-bugfix-for-ufcs-sfinae.cpp:7:
pure2-bugfix-for-ufcs-sfinae.cpp2: In instantiation of ‘<lambda(Obj&&, Params&& ...)> [with Obj = B; Params = {}; bool IsNothrow = false]’:
pure2-bugfix-for-ufcs-sfinae.cpp2:1:99:   required by substitution of ‘template<class T> std::type_identity_t<decltype (<lambda>(T()))> f() [with T = B]’
pure2-bugfix-for-ufcs-sfinae.cpp2:6:105:   required by substitution of ‘template<class T> main()::<lambda(const T&)> mutable [with T = B]’
/usr/include/c++/13/type_traits:2558:26:   required by substitution of ‘template<class _Fn, class ... _Args> static std::__result_of_success<decltype (declval<_Fn>()((declval<_Args>)()...)), std::__invoke_other> std::__result_of_other_impl::_S_test(int) [with _Fn = main()::<lambda(const T&)>&&; _Args = {B}]’
/usr/include/c++/13/type_traits:2569:55:   required from ‘struct std::__result_of_impl<false, false, main()::<lambda(const T&)>&&, B>’
/usr/include/c++/13/type_traits:3077:12:   recursively required by substitution of ‘template<class _Result, class _Ret> struct std::__is_invocable_impl<_Result, _Ret, true, std::__void_t<typename _CTp::type> > [with _Result = std::__invoke_result<main()::<lambda(const T&)>&&, B>; _Ret = void]’
/usr/include/c++/13/type_traits:3077:12:   required from ‘struct std::is_invocable<main()::<lambda(const T&)>&&, B>’
/usr/include/c++/13/type_traits:3365:71:   required from ‘constexpr const bool std::is_invocable_v<main()::<lambda(const T&)>&&, B>’
pure2-bugfix-for-ufcs-sfinae.cpp2:7:24:   required from here
../../../include/cpp2util.h:965:58: error: static assertion failed: this function call syntax tries 'obj.func(...)', then 'func(obj,...);' - both failed, did you spell the function name correctly?
  965 |         static_assert( cpp2::impl::dependent_false<Obj>::value, "this function call syntax tries 'obj.func(...)', then 'func(obj,...);' - both failed, did you spell the function name correctly?" ); \
      |                                                          ^~~~~
../../../include/cpp2util.h:974:59: note: in expansion of macro ‘CPP2_UFCS_’
  974 | #define CPP2_UFCS_NONLOCAL(...)                           CPP2_UFCS_(,CPP2_UFCS_IDENTITY,(),,__VA_ARGS__)
      |                                                           ^~~~~~~~~~
pure2-bugfix-for-ufcs-sfinae.cpp2:1:78: note: in expansion of macro ‘CPP2_UFCS_NONLOCAL’
../../../include/cpp2util.h:965:58: note: ‘std::integral_constant<bool, false>::value’ evaluates to false
  965 |         static_assert( cpp2::impl::dependent_false<Obj>::value, "this function call syntax tries 'obj.func(...)', then 'func(obj,...);' - both failed, did you spell the function name correctly?" ); \
      |                                                          ^~~~~
../../../include/cpp2util.h:974:59: note: in expansion of macro ‘CPP2_UFCS_’
  974 | #define CPP2_UFCS_NONLOCAL(...)                           CPP2_UFCS_(,CPP2_UFCS_IDENTITY,(),,__VA_ARGS__)
      |                                                           ^~~~~~~~~~
pure2-bugfix-for-ufcs-sfinae.cpp2:1:78: note: in expansion of macro ‘CPP2_UFCS_NONLOCAL’
pure2-bugfix-for-ufcs-sfinae.cpp2: In instantiation of ‘<lambda(Obj&&, Params&& ...)> [with Obj = B; Params = {}; bool IsNothrow = false]’:
pure2-bugfix-for-ufcs-sfinae.cpp2:1:99:   required by substitution of ‘template<class T> std::type_identity_t<decltype (<lambda>(T()))> f() [with T = B]’
pure2-bugfix-for-ufcs-sfinae.cpp2:6:105:   required by substitution of ‘template<class T> main()::<lambda(const T&)> mutable [with T = B]’
/usr/include/c++/13/type_traits:2558:26:   required by substitution of ‘template<class _Fn, class ... _Args> static std::__result_of_success<decltype (declval<_Fn>()((declval<_Args>)()...)), std::__invoke_other> std::__result_of_other_impl::_S_test(int) [with _Fn = main()::<lambda(const T&)>&&; _Args = {B}]’
/usr/include/c++/13/type_traits:2569:55:   required from ‘struct std::__result_of_impl<false, false, main()::<lambda(const T&)>&&, B>’
/usr/include/c++/13/type_traits:3077:12:   recursively required by substitution of ‘template<class _Result, class _Ret> struct std::__is_invocable_impl<_Result, _Ret, true, std::__void_t<typename _CTp::type> > [with _Result = std::__invoke_result<main()::<lambda(const T&)>&&, B>; _Ret = void]’
/usr/include/c++/13/type_traits:3077:12:   required from ‘struct std::is_invocable<main()::<lambda(const T&)>&&, B>’
/usr/include/c++/13/type_traits:3365:71:   required from ‘constexpr const bool std::is_invocable_v<main()::<lambda(const T&)>&&, B>’
pure2-bugfix-for-ufcs-sfinae.cpp2:7:24:   required from here
../../../include/cpp2util.h:965:58: error: static assertion failed: this function call syntax tries 'obj.func(...)', then 'func(obj,...);' - both failed, did you spell the function name correctly?
  965 |         static_assert( cpp2::impl::dependent_false<Obj>::value, "this function call syntax tries 'obj.func(...)', then 'func(obj,...);' - both failed, did you spell the function name correctly?" ); \
      |                                                          ^~~~~
../../../include/cpp2util.h:974:59: note: in expansion of macro ‘CPP2_UFCS_’
  974 | #define CPP2_UFCS_NONLOCAL(...)                           CPP2_UFCS_(,CPP2_UFCS_IDENTITY,(),,__VA_ARGS__)
      |                                                           ^~~~~~~~~~
pure2-bugfix-for-ufcs-sfinae.cpp2:1:78: note: in expansion of macro ‘CPP2_UFCS_NONLOCAL’
../../../include/cpp2util.h:965:58: note: ‘std::integral_constant<bool, false>::value’ evaluates to false
  965 |         static_assert( cpp2::impl::dependent_false<Obj>::value, "this function call syntax tries 'obj.func(...)', then 'func(obj,...);' - both failed, did you spell the function name correctly?" ); \
      |                                                          ^~~~~
../../../include/cpp2util.h:974:59: note: in expansion of macro ‘CPP2_UFCS_’
  974 | #define CPP2_UFCS_NONLOCAL(...)                           CPP2_UFCS_(,CPP2_UFCS_IDENTITY,(),,__VA_ARGS__)
      |                                                           ^~~~~~~~~~
pure2-bugfix-for-ufcs-sfinae.cpp2:1:78: note: in expansion of macro ‘CPP2_UFCS_NONLOCAL’
